# see: https://setuptools.readthedocs.io/en/latest/setuptools.html#specifying-values
[metadata]
name = {{cookiecutter.package_name}}
version = file:VERSION

summary = {{cookiecutter.description}}
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM

url = https://github.com/{{cookiecutter.user_name}}/{{cookiecutter.package_name}}
author = {{cookiecutter.user_name}}
author_email = {{cookiecutter.email}}

[options]
include_package_data = True
zip_safe = False

[bdist_wheel]
universal=0